--- a/src/styles.css
+++ b/src/styles.css
@@ -2,5 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+:root {
+  --primary: #005cbb;
+}
+
+body {
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
