Add mobile navbar

--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,7 +1,8 @@
-nav {
+:host {
   --navbar: #d7e3ff;
   --search-placeholder: var(--mdc-filled-text-field-label-text-color);
   --search-icon: var(--mat-form-field-trailing-icon-color);
   --search-bg: var(--mdc-filled-text-field-container-color);
   --search-text: var(--mdc-filled-text-field-input-text-color);
+  --backdrop: #00000052;
 }
