Add desktop navbar

--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -5,4 +5,5 @@
   --search-bg: var(--mdc-filled-text-field-container-color);
   --search-text: var(--mdc-filled-text-field-input-text-color);
   --backdrop: #00000052;
+  --search-hover: #d0d2dc;
 }
