--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -3,36 +3,67 @@
   [ngClass]="focused ? 'bg-[--backdrop]' : ''"
 ><!-- Overlay backdrop --></div>
 <nav class="flex sticky top-0 h-14 bg-[--navbar] text-[--primary]">
-  <ul class="mx-auto w-full h-10 flex self-center items-center justify-end px-4">
-    <li class="mr-4 transition-all" [ngClass]="focused ? 'w-0' : 'w-10'"><a routerLink="/" class="flex">
-      <mat-icon inline [svgIcon]="Icons.AppLogo" aria-hidden="false" aria-label="Home"></mat-icon>
-    </a></li>
-    <li class="focus-within:grow transition-all duration-300">
+  <ul class="mx-auto w-full max-w-7xl h-10 flex self-center items-center justify-end px-4">
+    <li class="mr-4 transition-all" [ngClass]="focused ? 'w-0 md:w-10' : 'w-10'">
+      <a routerLink="/" class="flex transition-all" [ngClass]="focused ? 'w-0 md:w-10' : 'w-10'">
+        <mat-icon inline [svgIcon]="Icons.AppLogo" aria-hidden="false" aria-label="Home"></mat-icon>
+      </a>
+    </li>
+    <li class="focus-within:grow w-full transition-all duration-300">
       <form
-        class="flex items-center rounded-full border-2 border-transparent h-10 bg-[--search-bg] focus-within:border-[--primary] transition-all duration-300"
+        class="flex items-center rounded-full border-2 border-transparent h-10 bg-[--search-bg] focus-within:border-[--primary] transition-all duration-300 hover:bg-[--search-hover] hover:focus-within:bg-[--search-bg]"
+        (click)="q.focus()"
       >
-        <mat-icon class="mx-1 text-[--search-icon]" (click)="q.focus()">search</mat-icon>
+        <mat-icon class="mx-1 text-[--search-icon]" [fontIcon]="Icons.Search"></mat-icon>
         <input
           id="q" #q
           class="bg-inherit rounded-r-full w-full focus:outline-none placeholder-[--search-placeholder] text-[--search-text]"
           type="text"
           placeholder="Search questions"
-          (focus)="focused = true"
-          (blur)="focused = false"
+          (focus)="focused = true" (blur)="focused = false"
         >
       </form>
     </li>
-    <li>
-      <button type="button" mat-icon-button class="ml-4 transition-transform" aria-label="menu">
+    <li class="md:hidden ml-4">
+      <button
+        type="button"
+        mat-icon-button
+        class="transition-transform"
+        aria-label="menu"
+        [matMenuTriggerFor]="focused ? null : menu"
+      >
         <mat-icon
           class="absolute transition-all duration-300"
-          [ngClass]="focused ? 'visible opacity-100' : 'invisible opacity-0'" fontIcon="close"
+          [ngClass]="focused ? 'visible opacity-100' : 'invisible opacity-0'" [fontIcon]="Icons.Close"
         ></mat-icon>
         <mat-icon
           class="transition-all duration-300"
-          [ngClass]="focused ? 'invisible opacity-0' : 'visible opacity-100'" fontIcon="menu"
+          [ngClass]="focused ? 'invisible opacity-0' : 'visible opacity-100'" [fontIcon]="Icons.Menu"
         ></mat-icon>
       </button>
     </li>
+    <li class="hidden lg:block ml-4">
+      <button type="button" class="w-max" mat-button>ASK A QUESTION</button>
+    </li>
+    <li class="hidden md:block ml-4">
+      <button type="button" class="w-max" mat-button>LOG IN</button>
+    </li>
+    <li class="hidden md:block ml-4">
+      <button type="button" class="w-max" mat-flat-button>JOIN FOR FREE</button>
+    </li>
   </ul>
 </nav>
+<mat-menu #menu="matMenu">
+  <button mat-menu-item>
+    <mat-icon [fontIcon]="Icons.Add"></mat-icon>
+    <span>Ask a question</span>
+  </button>
+  <button mat-menu-item>
+    <mat-icon [fontIcon]="Icons.Login"></mat-icon>
+    <span>Login</span>
+  </button>
+  <button mat-menu-item>
+    <mat-icon [fontIcon]="Icons.Register"></mat-icon>
+    <span>Register</span>
+  </button>
+</mat-menu>
