--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,58 +1,56 @@
 <div
-  class="fixed top-0 bottom-0 left-0 right-0 transition-colors duration-300"
   [ngClass]="focused ? 'bg-[--backdrop]' : ''"
-><!-- Overlay backdrop --></div>
-<nav class="flex sticky top-0 h-14 bg-[--navbar] text-[--primary]">
-  <ul class="mx-auto w-full max-w-7xl h-10 flex self-center items-center justify-end px-4">
-    <li class="mr-4 transition-all" [ngClass]="focused ? 'w-0 md:w-10' : 'w-10'">
-      <a routerLink="/" class="flex transition-all" [ngClass]="focused ? 'w-0 md:w-10' : 'w-10'">
-        <mat-icon inline [svgIcon]="Icons.AppLogo" aria-hidden="false" aria-label="Home"></mat-icon>
+  class="fixed bottom-0 left-0 right-0 top-0 transition-colors duration-300"
+><!-- OVERLAY BACKDROP --></div>
+<nav class="sticky top-0 flex h-14 bg-[--navbar] text-[--primary]">
+  <ul class="mx-auto flex h-10 w-full max-w-7xl items-center justify-end self-center px-4">
+    <li [ngClass]="focused ? 'w-0 md:w-10' : 'w-10'" class="mr-4 transition-all">
+      <a [ngClass]="focused ? 'w-0 md:w-10' : 'w-10'" class="flex transition-all" routerLink="/">
+        <mat-icon [svgIcon]="Icons.AppLogo" aria-hidden="false" aria-label="Home" inline></mat-icon>
       </a>
     </li>
-    <li class="focus-within:grow w-full transition-all duration-300">
+    <li class="w-full transition-all duration-300 focus-within:grow">
       <form
-        class="flex items-center rounded-full border-2 border-transparent h-10 bg-[--search-bg] focus-within:border-[--primary] transition-all duration-300 hover:bg-[--search-hover] hover:focus-within:bg-[--search-bg]"
         (click)="q.focus()"
+        class="flex h-10 items-center rounded-full border-2 border-transparent bg-[--search-bg] transition-all duration-300 focus-within:border-[--primary] hover:bg-[--search-hover] hover:focus-within:bg-[--search-bg]"
       >
-        <mat-icon class="mx-1 text-[--search-icon]" [fontIcon]="Icons.Search"></mat-icon>
+        <mat-icon [fontIcon]="Icons.Search" class="mx-1 text-[--search-icon]"></mat-icon>
         <input
-          id="q" #q
-          class="bg-inherit rounded-r-full w-full focus:outline-none placeholder-[--search-placeholder] text-[--search-text]"
-          type="text"
-          placeholder="Search questions"
-          (focus)="focused = true" (blur)="focused = false"
-        >
+          #q (blur)="focused = false" (focus)="focused = true"
+          class="w-full rounded-r-full bg-inherit text-[--search-text] placeholder-[--search-placeholder] focus:outline-none"
+          id="q" placeholder="Search questions" type="text"
+        />
       </form>
     </li>
-    <li class="md:hidden ml-4">
+    <li class="ml-4 md:hidden">
       <button
-        type="button"
-        mat-icon-button
-        class="transition-transform"
-        aria-label="menu"
         [matMenuTriggerFor]="focused ? null : menu"
+        aria-label="menu" class="transition-transform"
+        mat-icon-button type="button"
       >
         <mat-icon
+          [fontIcon]="Icons.Close" [ngClass]="focused ? 'visible opacity-100' : 'invisible opacity-0'"
           class="absolute transition-all duration-300"
-          [ngClass]="focused ? 'visible opacity-100' : 'invisible opacity-0'" [fontIcon]="Icons.Close"
         ></mat-icon>
         <mat-icon
+          [fontIcon]="Icons.Menu" [ngClass]="focused ? 'invisible opacity-0' : 'visible opacity-100'"
           class="transition-all duration-300"
-          [ngClass]="focused ? 'invisible opacity-0' : 'visible opacity-100'" [fontIcon]="Icons.Menu"
         ></mat-icon>
       </button>
     </li>
-    <li class="hidden lg:block ml-4">
-      <button type="button" class="w-max" mat-button>ASK A QUESTION</button>
+    <li class="ml-4 hidden lg:block">
+      <button class="w-max" mat-button type="button">ASK A QUESTION</button>
     </li>
-    <li class="hidden md:block ml-4">
-      <button type="button" class="w-max" mat-button>LOG IN</button>
+    <li class="ml-4 hidden md:block">
+      <button class="w-max" mat-button type="button">LOG IN</button>
     </li>
-    <li class="hidden md:block ml-4">
-      <button type="button" class="w-max" mat-flat-button>JOIN FOR FREE</button>
+    <li class="ml-4 hidden md:block">
+      <button class="w-max" mat-flat-button type="button">JOIN FOR FREE</button>
     </li>
   </ul>
 </nav>
+
+<!-- MOBILE MENU -->
 <mat-menu #menu="matMenu">
   <button mat-menu-item>
     <mat-icon [fontIcon]="Icons.Add"></mat-icon>
