--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="mt-24 flex justify-end border-t border-[--footer-border] p-6">
+<footer class="mt-24 flex justify-center border-t border-[--footer-border] p-6 lg:justify-end">
   <div class="flex flex-col text-center text-xs text-[--footer-text]">
     <a
       class="hover:cursor-pointer hover:underline" href="https://github.com/kuro-vale"
