--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,11 @@
-<p>home works!</p>
+<div class="flex h-[340px] w-full items-center justify-center bg-[--navbar] text-center lg:h-[440px]">
+  <div>
+    <h1 style="font-weight: 500">Shiro Questions</h1>
+    <p class="text-xl font-light" i18n="@@home_desc">
+      A place to ask with confidence
+    </p>
+    <button class="z-0" i18n="@@new_question" mat-raised-button>
+      Ask a question
+    </button>
+  </div>
+</div>
