Add home categories

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,9 +1,9 @@
-<footer class="mt-24 flex justify-center border-t border-[--footer-border] p-6 lg:justify-end">
+<footer class="mt-20 flex justify-center border-t border-[--footer-border] p-6 lg:justify-end">
   <div class="flex flex-col text-center text-xs text-[--footer-text]">
     <a
       class="hover:cursor-pointer hover:underline" href="https://github.com/kuro-vale"
       i18n="@@footer_author" target="_blank"
-    >Made by kurovale.</a>
+    >Made by kurovale 2024.</a>
     <a
       class="hover:cursor-pointer hover:underline" href="https://github.com/kuro-vale/shiro-questions/blob/main/LICENSE"
       i18n="@@footer_license" target="_blank"
