Add app logo to Home page

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,8 +1,12 @@
 <div class="mb-14 flex h-[340px] w-full items-center justify-center bg-[--navbar] text-center lg:h-[440px]">
   <div>
-    <h1 class="!font-medium">Shiro Questions</h1>
+    <h1 class="!mb-4 !font-medium">Shiro Questions</h1>
     <p class="text-xl font-light" i18n="@@home_desc">A place to ask with confidence</p>
-    <button i18n="@@new_question" mat-raised-button>Ask a question</button>
+    <button class="mt-8" i18n="@@new_question" mat-raised-button type="button">Ask a question</button>
+  </div>
+  <div
+    class="pointer-events-none absolute left-1/2 ml-[330px] mt-[100px] hidden h-[500px] w-[500px] -translate-x-1/2 opacity-10 lg:block">
+    <mat-icon [svgIcon]="Icons.AppLogo" inline></mat-icon>
   </div>
 </div>
 
