--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -53,7 +53,11 @@
       <button class="w-max" i18n="@@nav_login" mat-button type="button">LOG IN</button>
     </li>
     <li class="ml-4 hidden md:block">
-      <button class="w-max" i18n="@@nav_join" mat-flat-button type="button">JOIN FOR FREE</button>
+      <button
+        (click)="openRegisterDialog()" class="w-max"
+        i18n="@@nav_join" mat-flat-button type="button"
+      >JOIN FOR FREE
+      </button>
     </li>
   </ul>
 </nav>
@@ -69,7 +73,7 @@
       <mat-icon [fontIcon]="Icons.Login"></mat-icon>
       <span i18n="@@login">Login</span>
     </button>
-    <button mat-menu-item>
+    <button (click)="openRegisterDialog()" mat-menu-item>
       <mat-icon [fontIcon]="Icons.Register"></mat-icon>
       <span i18n="@@register">Register</span>
     </button>
