--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -50,7 +50,11 @@
       <button class="w-max" i18n="@@nav_new_question" mat-button type="button">ASK A QUESTION</button>
     </li>
     <li class="ml-4 hidden md:block">
-      <button class="w-max" i18n="@@nav_login" mat-button type="button">LOG IN</button>
+      <button
+        (click)="openLoginDialog()" class="w-max"
+        i18n="@@nav_login" mat-button type="button"
+      >LOG IN
+      </button>
     </li>
     <li class="ml-4 hidden md:block">
       <button
@@ -69,9 +73,9 @@
       <mat-icon [fontIcon]="Icons.Add"></mat-icon>
       <span i18n="@@new_question">Ask a question</span>
     </button>
-    <button mat-menu-item>
+    <button (click)="openLoginDialog()" mat-menu-item>
       <mat-icon [fontIcon]="Icons.Login"></mat-icon>
-      <span i18n="@@login">Login</span>
+      <span i18n="@@login">Log in</span>
     </button>
     <button (click)="openRegisterDialog()" mat-menu-item>
       <mat-icon [fontIcon]="Icons.Register"></mat-icon>
