Refactor user form logic

--- a/src/app/components/user/login-dialog/login-dialog.component.html
+++ b/src/app/components/user/login-dialog/login-dialog.component.html
@@ -2,6 +2,11 @@
 <mat-dialog-content>
   <div class="max-w-[400px] md:min-w-[400px]">
     <h2 class="text-center !text-lg" i18n="@@login_subtitle">Get answers to your questions now</h2>
-    <app-user-form (onSubmit)="onSubmit($event)" [isLogin]="true" [openNext]="openNext.bind(this)"></app-user-form>
+    <app-user-form [isLogin]="true"></app-user-form>
+    <p
+      class="pt-5" i18n="@@register_to_login"
+    >Already have an account? <span
+      (click)="openNext()" class="cursor-pointer text-[--primary] hover:underline"
+    >Log in</span></p>
   </div>
 </mat-dialog-content>
