--- a/src/app/components/user/user-form/user-form.component.html
+++ b/src/app/components/user/user-form/user-form.component.html
@@ -1,4 +1,4 @@
-<form (ngSubmit)="submit()" [formGroup]="userForm" class="mt-8 flex flex-col jPlease log in to do thisustify-center">
+<form (ngSubmit)="submit()" [formGroup]="userForm" class="mt-8 flex flex-col justify-center">
   <mat-form-field class="mb-1">
     <mat-label i18n="@@username">Username</mat-label>
     <input formControlName="username" matInput/>
