Fixes on unit test

--- a/src/app/components/user/user-form/user-form.component.html
+++ b/src/app/components/user/user-form/user-form.component.html
@@ -16,11 +16,9 @@
   @if (isLogin) {
     <mat-checkbox formControlName="rememberMe" i18n="@@keepme_logged">Keep me logged in</mat-checkbox>
     <button class="mt-2" i18n="@@login" mat-flat-button type="submit" [disabled]="loading"
-    >Log in
-    </button>
+    >Log in</button>
   } @else {
     <button class="mt-2" i18n="@@register" mat-flat-button type="submit" [disabled]="loading"
-    >Register
-    </button>
+    >Register</button>
   }
 </form>
