Add profile tab

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -26,15 +26,18 @@
         <input
           #q (blur)="focused = false" (focus)="focused = true"
           class="w-full rounded-r-full bg-inherit text-[--search-text] placeholder-[--search-placeholder] focus:outline-none"
-          i18n-placeholder="@@nav_search" id="q" placeholder="Search questions" type="text"
+          i18n-placeholder="@@nav_search" id="q" placeholder="Search questions" type="search"
         />
       </form>
     </li>
     <!-- MENU BUTTON -->
     <li class="ml-4 md:hidden">
       <button
-        [matMenuTriggerFor]="focused ? null : menu"
-        aria-label="Menu" i18n-aria-label="@@menu" mat-icon-button type="button"
+        [matMenuTriggerFor]="menu"
+        aria-label="Menu" i18n-aria-label="@@menu"
+        title="Menu" i18n-title="@@menu"
+        mat-icon-button
+        type="button"
       >
         <mat-icon
           [fontIcon]="Icons.Close" [ngClass]="focused ? 'visible opacity-100' : 'invisible opacity-0'"
@@ -49,7 +52,7 @@
     <li class="ml-4 hidden lg:block">
       <button class="w-max" i18n="@@nav_new_question" mat-button type="button">ASK A QUESTION</button>
     </li>
-    @if (!onLoginPage) {
+    @if (!onLoginPage && !user) {
       <li class="ml-4 hidden md:block">
         <button
           (click)="openLoginDialog()" class="w-max"
@@ -58,12 +61,25 @@
         </button>
       </li>
     }
-    @if (!onRegisterPage) {
+    @if (!onRegisterPage && !user) {
       <li class="ml-4 hidden md:block">
         <button
           (click)="openRegisterDialog()" class="w-max"
           i18n="@@nav_join" mat-flat-button type="button"
         >JOIN FOR FREE
+        </button>
+      </li>
+    }
+    @if (user) {
+      <li class="ml-4">
+        <button
+          mat-icon-button
+          title="Profile" i18n-title="@@profile"
+          aria-label="Profile" i18n-aria-label="@@profile"
+          type="button"
+          [routerLink]="Paths.Profile"
+        >
+          <mat-icon [fontIcon]="Icons.Account"></mat-icon>
         </button>
       </li>
     }
@@ -77,13 +93,13 @@
       <mat-icon [fontIcon]="Icons.Add"></mat-icon>
       <span i18n="@@new_question">Ask a question</span>
     </button>
-    @if (!onLoginPage) {
+    @if (!onLoginPage && !user) {
       <button (click)="openLoginDialog()" mat-menu-item>
         <mat-icon [fontIcon]="Icons.Login"></mat-icon>
         <span i18n="@@login">Log in</span>
       </button>
     }
-    @if (!onRegisterPage) {
+    @if (!onRegisterPage && !user) {
       <button (click)="openRegisterDialog()" mat-menu-item>
         <mat-icon [fontIcon]="Icons.Register"></mat-icon>
         <span i18n="@@register">Register</span>
