--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -26,7 +26,7 @@
         <input
           #q (blur)="focused = false" (focus)="focused = true"
           class="w-full rounded-r-full bg-inherit text-[--search-text] placeholder-[--search-placeholder] focus:outline-none"
-          i18n-placeholder="@@nav_search" id="q" placeholder="Search questions" type="search"
+          i18n-placeholder="@@nav_search" id="q" placeholder="Search questions" type="text"
         />
       </form>
     </li>
