--- a/src/app/components/user/profile/profile.component.html
+++ b/src/app/components/user/profile/profile.component.html
@@ -1,31 +1,20 @@
 <div class="w-full h-28 banner"></div>
 
-<mat-tab-group dynamicHeight>
-  <mat-tab i18n-label="@@profile" label="Profile">
-    <div class="flex items-center flex-col">
-      @if (user()) {
-        <div class="bg-gray-600 rounded-full mt-10 mb-5">
-          <img
-            [src]="'https://picsum.photos/seed/' + user()!.username + '/250/'"
-            alt="Profile picture" i18n-alt="@@profile_picture"
-            class="rounded-full"
-            height="250" width="250"
-          />
-        </div>
-        <h4>{{ user()!.username }}</h4>
-      }
-    </div>
-  </mat-tab>
-  <mat-tab i18n-label="@@questions" label="Questions">
-    <div class="flex items-center flex-col mt-10">
-      @if (questions$ | async; as questions) {
-        @for (question of questions.items; track question.id) {
-          <app-question-card [question]="question"></app-question-card>
-        } @empty {
-          <img ngSrc="empty-doc.svg" height="150" width="150" alt="error">
-          <h4 i18n="@@profile_emptyquestions">You still haven't asked anything</h4>
-        }
-      }
-    </div>
-  </mat-tab>
-</mat-tab-group>
+<nav [tabPanel]="tabPanel" mat-tab-nav-bar>
+  <a
+    (click)="url = Paths.Profile"
+    [active]="url.endsWith(Paths.Profile)"
+    i18n="@@profile"
+    mat-tab-link
+    routerLink="./"
+  >Profile</a>
+  <a
+    (click)="url = Paths.Questions"
+    [active]="url.includes(Paths.Questions)"
+    [routerLink]="Paths.Questions"
+    i18n="@@questions"
+    mat-tab-link
+  >Questions</a>
+</nav>
+<mat-tab-nav-panel #tabPanel></mat-tab-nav-panel>
+<router-outlet></router-outlet>
