Add navbar actions

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,6 +2,7 @@
   <div>
     <h1 class="!mb-4 !font-medium">Shiro Questions</h1>
     <p class="text-xl font-light" i18n="@@home_desc">A place to ask with confidence</p>
+    <!-- TODO -->
     <button class="mt-8" i18n="@@new_question" mat-raised-button type="button">Ask a question</button>
   </div>
   <div
