--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -12,6 +12,6 @@
     <a
       class="mt-4 hover:cursor-pointer hover:underline md:mt-0" href="https://x.com/_Silvervale_"
       i18n="@@footer_silvervale" target="_blank"
-    >Follow Silvervale. 💙</a>
+    >Follow Silvervale. 💙🩷</a>
   </div>
 </footer>
