--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -55,16 +55,14 @@
         i18n="@@nav_new_question"
         mat-button type="button"
         (click)="openAskQuestionDialog()"
-      >ASK A QUESTION
-      </button>
+      >ASK A QUESTION</button>
     </li>
     @if (!onLoginPage && !user()) {
       <li class="ml-4 hidden md:block">
         <button
           (click)="openLoginDialog()" class="w-max"
           i18n="@@nav_login" mat-button type="button"
-        >LOG IN
-        </button>
+        >LOG IN</button>
       </li>
     }
     @if (!onRegisterPage && !user()) {
@@ -72,8 +70,7 @@
         <button
           (click)="openRegisterDialog()" class="w-max"
           i18n="@@nav_join" mat-flat-button type="button"
-        >JOIN FOR FREE
-        </button>
+        >JOIN FOR FREE</button>
       </li>
     }
     @if (user()) {
@@ -93,8 +90,7 @@
         <button
           class="w-max !text-gray-800"
           i18n="@@nav_logout" mat-button type="button"
-        >LOGOUT
-        </button>
+        >LOGOUT</button>
       </li>
     }
   </ul>
